app-test/testdata/typesystem/neg/pattern-matching-deconstructor-arg-number/check/patmat.check
testdata/typesystem/neg/pattern-matching-deconstructor-arg-number/src/patmat.cal:8:21: error: Wrong number of arguments; expected 2, but was 3.
                    T(1, true, 2.5) : 1 end // error
                    ^^^^^^^^^^^^^^^